# shadow-clerk

./: .clerk_monitor.sh  .gitignore  CLAUDE.md  LICENSE  Makefile  README.en.md  README.ja.md  README.md  SPEC.md  THIRD_PARTY_LICENSES.md  clerk_daemon.py  i18n.py  llm_client.py  pyproject.toml  recorder.py  spec.md
docs/: feature-tour.en.md  feature-tour.md
improvement/: cross-platform.md
skills/: SKILL.ja.md  SKILL.md  clerk-data  clerk-util
src/shadow_clerk/: __init__.py  _daemon_audio.py  _daemon_config.py  _daemon_constants.py  _daemon_dashboard.py  _daemon_dashboard_base.py  _daemon_dashboard_css.py  _daemon_dashboard_handler.py  _daemon_dashboard_html.py  _daemon_dashboard_js.py  _daemon_dashboard_ops.py  _daemon_log_buffer.py  _daemon_main.py  _daemon_recorder.py  _daemon_recorder_capture.py  _daemon_recorder_command.py  _daemon_recorder_transcribe.py  _daemon_transcriber.py  _daemon_vad.py  _llm_config.py  _llm_glossary.py  _llm_summarize.py  _llm_translate.py  clerk_daemon.py  clerk_util.py  i18n.py  llm_client.py
src/shadow_clerk/data/: SKILL.ja.md.template  SKILL.md.template
