[project]
name = "shadow-clerk"
version = "0.1.0"
description = "Web会議の音声をリアルタイムで録音・文字起こしするツール"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "webrtcvad-wheels>=2.0.11",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "pynput>=1.7.6",
    "evdev>=1.6.0",
]

[project.scripts]
shadow-clerk-record = "clerk_daemon:main"
