[project]
name = "shadow-clerk"
version = "0.2.0"
description = "Web会議の音声をリアルタイムで録音・文字起こしするツール"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "webrtcvad-wheels>=2.0.11",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "pynput>=1.7.6",
    "evdev>=1.6.0",
]

[project.scripts]
clerk-daemon = "shadow_clerk.clerk_daemon:main"
clerk-util = "shadow_clerk.clerk_util:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shadow_clerk = ["data/*.template"]
