[project]
name = "shadow-clerk"
version = "0.2.0"
description = "Real-time audio recording and transcription tool for web meetings"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "webrtcvad-wheels>=2.0.11",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "pynput>=1.7.6",
    "evdev>=1.6.0",
]

[project.optional-dependencies]
spell-check = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
]

[project.scripts]
clerk-daemon = "shadow_clerk.clerk_daemon:main"
clerk-util = "shadow_clerk.clerk_util:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shadow_clerk = ["data/*.template"]
